Fixed: icon size and missing picture.

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -72,11 +72,13 @@ layout: default
                 <article class="uk-article">
 
                     <h2 class="uk-article-title uk-margin-large-bottom">{{ page.title | escape }}</h2>
-                    {% if page.author %}
                     <p class="uk-text-lead uk-margin-large-bottom">
+                        {% if page.tags %}<span class="uk-badge">{{ page.tags }}</span>{% endif %}
+                        {% if page.tags and page.author %} - {% endif %}
+                        {% if page.author %}
                         Écrit par {% if page.authorLink %}<a href="{{ page.authorLink }}">{% endif %}{{ page.author }}{% if page.authorLink %}</a>{% endif %}.
+                        {% endif %}
                     </p>
-                    {% endif %}
 
                     {% comment %}
                     {% if page.subtitle %}
