--- a/_sass/theme/variables.scss
+++ b/_sass/theme/variables.scss
@@ -12,7 +12,7 @@ $global-color:                                  #64676d;
 $global-primary-background:                     #dd0000;
 $global-secondary-background:                   #000;
 $global-warning-background:                   #fbc418;
-$global-success-background:                   #683ab3;
+$global-success-background:                   #1e87f0;
 $global-danger-background:                    #f0506e;
 $global-muted-background:                       #fafafa;
 $global-link-color:                             $global-primary-background;
