Fixed: static logo size.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 
             <div>
                 <div class="uk-margin">
-                    <a class="uk-logo" href="{{ "/" | relative_url }}">{% if site.logo %}<img src="{{ site.uploads | absolute_url }}{{ site.logo }}" alt="{{ site.title | escape }}">{% else %}{{ site.title | escape }}{% endif %}</a>
+                    <a class="uk-logo" href="{{ "/" | relative_url }}">{% if site.logo %}<img src="{{ site.uploads | absolute_url }}{{ site.logo }}" alt="{{ site.title | escape }}" width="237" height="32">{% else %}{{ site.title | escape }}{% endif %}</a>
                 </div>
             </div>
 
